# Skill-Discovery-Agent

./: .gitignore  PLAN.md  README.md  TSF_TASK2.ipynb  client.py  pyproject.toml  requirements.txt
app/: README.md  client.py  pyproject.toml
app/app/: main.py
app/data/: stocks_market_cap.csv
app/research/: TSF_TASK2.ipynb  deployement_test.ipynb
app/research/data/: sotcks_list.csv
config/: organizer_config.py
configs/: diayn.yaml
data_engineering/: content_extractor.py  feature_engineer.py  file_processor.py
docs/: training_metrics_guide.md
ingestion-pipeline/: Dockerfile  pyproject.toml
ingestion-pipeline/research/: apis.ipynb
ingestion-pipeline/tests/: test_ingestion_pipeline.py
ingestion_pipeline/: __init__.py  pyproject.toml
ingestion_pipeline/research/: apis.ipynb
logs/diayn/20250727_001703/: events.out.tfevents.1753575423.cs-01k149etnt8rdgr95cnaan3yp5.72710.0
machine_learning/: pyproject.toml
machine_learning/app/: main.py
machine_learning/models/: base_model.py  image_cluster.py  text_cluster.py
machine_learning/research/: Tunisian_Market.ipynb  deployement_test.ipynb
research/: TSF_TASK2.ipynb  deployement_test.ipynb  skill-discovery-agent.ipynb
src/: factory.py
src/agents/: base_agent.py  diayn_agent.py
src/envs/: __init__.py  minigrid_wrapper.py
src/models/: base_model.py  descriminator.py  descriminator_model.py  encoder.py
src/scripts/: train.py  visualization.py  visualize_skills.py
src/utils/: env_utils.py  train_utils.py
tests/: test_env.py  test_ingestion_pipeline.py
