[project]
name = "ingestion-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "requests>=2.32.3",
    "litserve>=0.2.7",
    "matplotlib>=3.10.1",
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
    "seaborn>=0.13.2",
    "python-docx>=0.8.11",
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "python-magic>=0.4.24",
    "python-magic-bin>=0.4.14 ; sys_platform == 'win32'",
    "pypdf2>=2.0.0",
    "openpyxl>=3.0.9",
    "python-pptx>=0.6.21",
    "beautifulsoup4>=4.10.0",
    "lxml>=4.6.3",
    "pillow>=9.0.0",
    "torch>=1.9.0",
    "torchvision>=0.10.0",
    "sentence-transformers>=2.2.0",
    "transformers>=4.11.0",
    "click>=8.0.0",
    "rich>=10.12.0",
    "tqdm>=4.62.0",
    "python-dateutil>=2.8.2",
    "pytz>=2021.3",
    "twine>=3.7.1",
    "wheel>=0.37.0",
    "black>=21.12b0",
    "flake8>=4.0.1",
    "pytest>=6.2.5",
    "pytest-cov>=3.0.0",
]
