[project]
name = "skill-discovery-agent"
version = "0.1.0"
description = "Skill Discovery Agent"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
 "gymnasium>=1.2.0",
 "imageio>=2.37.0",
 "matplotlib>=3.10.3",
 "minigrid>=3.0.0",
 "pyyaml>=6.0.2",
 "seaborn>=0.13.2",
 "tensorboard>=2.20.0",
 "torch>=2.7.1",
 "tqdm>=4.67.1",
]

[project.optional-dependencies]
dev = [
    "ipykernel>=6.30.0",
    "ipywidgets>=8.1.7",
    "pytest>=8.4.1",
]
