[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Hamza Bouajila <92599589+BouajilaHamza@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
litserve = "^0.2.2"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
